1.1.2: build into an existing room, preset import, and the fixes that made both work
Build preset here now actually builds. Before it only selected the preset and
asked you to type :ip; the hint next to it claimed otherwise. It hangs a
temporary work area next to the room, keeps stack tile and work tile out there,
builds, and writes the room's own floor plan back from the snapshot taken
beforehand - so nothing about the room changes. Optionally the floor plan stored
with the preset can be adopted instead, which is the only path that does change
the room and is therefore off by default.

Preset import reads a .json plus an optional floor plan, either from a .txt or
pasted into an editor field. The door tile is derived from the plan and the door
rule is checked before anything is sent.

Two placement bugs, both found by measuring rather than guessing:

Rugs were classified as floor coverings and placed directly on their target
tile, which upstream G-Presets never did - it only consults the hardcoded
blacklist. That put the rug on the floor first, and the Roller Rink can only be
placed on bare floor, so the server refused it four times in a 1582 furni build.
Restoring the upstream rule moves rugs back through the stack tile.

Bot messages went out as ISO-8859-1 because HPacket writes strings that way
without a charset argument. Every German umlaut reached the client as a
replacement character. The same UTF-8 pre-encoding the server direction already
used now applies to packets sent to the client.

The manifest carries Add-Opens and Add-Exports for the JavaFX packages
RichTextFX reflects into. G-Earth picks the runtime from Build-Jdk, and on its
bundled Java 21 the console died on an InaccessibleObjectException before the
extension ever appeared in the list.

Also: item and wired counts per preset, an ETA for placing and for the whole
build derived from the rate limit, in-game progress messages with an overall
percentage weighted by real phase duration, progress every 1